--- a/themes/bootstrap/templates/layout/parts/header-checkout.twig
+++ b/themes/bootstrap/templates/layout/parts/header-checkout.twig
@@ -30,7 +30,7 @@
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/login">Sign In</a></li>
+                <li><a href="{{ routeUrl('user.login') }}">Sign In</a></li>
                 <li><a href="{{ routeUrl('cart.get.show') }}"><i class="fa fa-shopping-cart"></i> Cart</a></li>
             </ul>
         </div>
