--- a/themes/bootstrap/templates/layout/parts/header.twig
+++ b/themes/bootstrap/templates/layout/parts/header.twig
@@ -18,7 +18,7 @@
                         </li>
                     {% else %}
                         <li>
-                            <a href="{{ routeUrl('login') }}">Sign In</a>
+                            <a href="{{ routeUrl('user.login') }}">Sign In</a>
                         </li>
                     {% endif %}
 
