--- a/themes/bootstrap/templates/user/change-password.twig
+++ b/themes/bootstrap/templates/user/change-password.twig
@@ -20,7 +20,7 @@
                       id="change-password"
                       class="form"
                       role="form">
-                    <input type="hidden" name="_token" value="{{ CSRF_TOKEN }}">
+                    {{ form.csrf() }}
 
                     <div class="form-group">
                         <label for="passwordNew" class="control-label">New password:</label>
