--- a/themes/bootstrap/templates/product/show.twig
+++ b/themes/bootstrap/templates/product/show.twig
@@ -91,8 +91,7 @@
                                   id="cart_add_item"
                                   class="form-inline"
                                   method="post">
-
-                                <input type="hidden" name="_token" value="{{ CSRF_TOKEN }}">
+                                {{ form.csrf() }}
                         {% endif %}
 
                         {% if product.options is not empty or product.textOptions is not empty %}
